--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,7 +29,7 @@ layout: default
         <a class="post-link" href="{{ post.url | relative_url }}">
           <h2 class="post-title">{{ post.title | escape }}</h2>
         </a>
-        <div class="post-meta">
+        <!-- <div class="post-meta">
           <div class="post-date">
             <i class="icon-calendar"></i>
             {{ post.date | date: date_format }}
@@ -41,7 +41,7 @@ layout: default
             {%- endfor -%}
           </ul>
           {%- endif -%}
-        </div>
+        </div> -->
         <div class="post">
           {%- if site.show_excerpts -%}
             {{ post.excerpt }}
