--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -74,21 +74,29 @@ main {
       margin-left: $leftWidth;
       width: 100%;
     }
+  font-family: "Merriweather", sans-serif;
+  font-weight: 300;
+  color: #222;
+  line-height: 1.9em;
+  p {
+    margin-top: 10px;
   }
-  .about {
-    display: flex;
-    height: 100vh;
-    padding-bottom: 15vh;
-    @media screen and (max-width: $mobileW) {
-      height: auto;
-      padding: 5vh 30px;
+  a {
+    color: $linkColor;
+    text-decoration: none;
+    transition: border-bottom 0.4s;
+    &:hover {
+      border-bottom: 0.5px solid $linkColor;
     }
-    @media screen and (max-width: $smallMobileW) {
-      padding: 5vh 20px;
-    }
-    @media screen and (min-width: $mobileW + 1) {
-      position: fixed;
-      max-width: 280px;
+  }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: Raleway, sans-serif;
+  }
     }
     min-width: $leftWidth;
     justify-content: center;
