--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -5,8 +5,8 @@
 $linkColor: #0a59b0;
 $mobileW: 768px;
 $smallMobileW: 480px;
-$bigScreenW: 2000px;
-$leftWidth: 440px;
+$bigScreenW: 1600px;
+$leftWidth: 220px;
 
 *,
 *:before,
@@ -16,8 +16,8 @@ $leftWidth: 440px;
 
 body {
   font-family: "Raleway", sans-serif;
-  font-size: 18px;
-  line-height: 1.4em;
+  font-size: 16px;
+  line-height: 1.2em;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -74,7 +74,7 @@ main {
       margin-left: $leftWidth;
       width: 100%;
     }
-  font-family: "Merriweather", sans-serif;
+    font-family: "Merriweather", sans-serif;
   font-weight: 300;
   color: #222;
   line-height: 1.9em;
@@ -97,6 +97,21 @@ main {
   h6 {
     font-family: Raleway, sans-serif;
   }
+}
+  .about {
+    display: flex;
+    height: 100vh;
+    padding-bottom: 15vh;
+    @media screen and (max-width: $mobileW) {
+      height: auto;
+      padding: 5vh 30px;
+    }
+    @media screen and (max-width: $smallMobileW) {
+      padding: 5vh 20px;
+    }
+    @media screen and (min-width: $mobileW + 1) {
+      position: fixed;
+      max-width: 280px;
     }
     min-width: $leftWidth;
     justify-content: center;
