--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -119,6 +119,13 @@
           </li>
         </a>
         {%- endif -%}
+        {%- if site.plainwhite.social_links.google -%}
+        <a href="https://scholar.google.com/citations?user={{ site.plainwhite.social_links.stackoverflow }}" target="_blank">
+          <li>
+            <i class="icon-google"></i>
+          </li>
+        </a>
+        {%- endif -%}
         {%- if site.plainwhite.social_links.email -%}
         <a href="mailto:{{ site.plainwhite.social_links.email }}" target="_blank">
           <li>
