--- a/_sass/ext/_fonts.scss
+++ b/_sass/ext/_fonts.scss
@@ -72,3 +72,4 @@
 .icon-linkedin-squared:before { content: '\f30c'; } /* '' */
 .icon-soundcloud:before { content: '\f348'; } /* '' */
 .icon-stack-overflow:before { content: '\f16c'; } /* '' */
+.icon-google:before { content: '\e802'; } /* '' */
