--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -122,7 +122,7 @@
         {%- if site.plainwhite.social_links.google -%}
         <a href="https://scholar.google.com/citations?user={{ site.plainwhite.social_links.stackoverflow }}" target="_blank">
           <li>
-            <i class="icon-google"></i>
+            <i class="icon-googleplus-rect"></i>
           </li>
         </a>
         {%- endif -%}
