--- a/_sass/ext/_fonts.scss
+++ b/_sass/ext/_fonts.scss
@@ -55,22 +55,28 @@
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
- 
-.icon-calendar:before { content: '\e800'; } /* '' */
-.icon-calendar-1:before { content: '\e801'; } /* '' */
-.icon-search:before { content: '\e805'; } /* '' */
-.icon-github-circled:before { content: '\f09b'; } /* '' */
-.icon-pinterest-squared:before { content: '\f0d3'; } /* '' */
-.icon-mail-alt:before { content: '\f0e0'; } /* '' */
-.icon-youtube:before { content: '\f167'; } /* '' */
-.icon-instagram:before { content: '\f16d'; } /* '' */
-.icon-flickr:before { content: '\f16e'; } /* '' */
-.icon-dribbble:before { content: '\f17d'; } /* '' */
-.icon-gitlab:before { content: '\f296'; } /* '' */
-.icon-telegram:before { content: '\f2c6'; } /* '' */
-.icon-twitter-squared:before { content: '\f304'; } /* '' */
-.icon-facebook-squared:before { content: '\f308'; } /* '' */
-.icon-linkedin-squared:before { content: '\f30c'; } /* '' */
-.icon-soundcloud:before { content: '\f348'; } /* '' */
-.icon-stack-overflow:before { content: '\f16c'; } /* '' */
-.icon-google:before { content: '\e802'; } /* '' */
+
+.icon-googleplus-rect:before { content: '\f309' }
+.icon-mail-alt:before { content: '\f0e0' }
+.icon-github-circled:before { content: '\f09b' }
+
+/*
+.icon-calendar:before { content: '\e800'; } 
+.icon-calendar-1:before { content: '\e801'; } 
+.icon-search:before { content: '\e805'; } 
+.icon-github-circled:before { content: '\f09b'; } 
+.icon-pinterest-squared:before { content: '\f0d3'; } 
+.icon-mail-alt:before { content: '\f0e0'; } 
+.icon-youtube:before { content: '\f167'; } 
+.icon-instagram:before { content: '\f16d'; } 
+.icon-flickr:before { content: '\f16e'; } 
+.icon-dribbble:before { content: '\f17d'; } 
+.icon-gitlab:before { content: '\f296'; } 
+.icon-telegram:before { content: '\f2c6'; } 
+.icon-twitter-squared:before { content: '\f304'; } 
+.icon-facebook-squared:before { content: '\f308'; } 
+.icon-linkedin-squared:before { content: '\f30c'; } 
+.icon-soundcloud:before { content: '\f348'; } 
+.icon-stack-overflow:before { content: '\f16c'; } 
+.icon-google:before { content: '\e802'; } 
+*/
